# agent-eval-kit

./: .gitignore  LICENSE  README.md  conftest.py  pyproject.toml
agenteval/: __init__.py  adapters.py  checks.py  cli.py  judge.py  pytest_plugin.py  runner.py  scenario.py  trajectory.py
rubrics/: helpfulness.yaml
scenarios/: hallucinated_tool_args.yaml  max_turns_loop_guard.yaml  multi_turn_context.yaml  refused_instruction.yaml  tool_use_happy_path.yaml
tests/: conftest.py  test_adapters.py  test_anthropic_adapter.py  test_checks.py  test_cli.py  test_judge.py  test_pytest_plugin.py  test_runner_and_scenarios.py  test_trajectory.py
